# QtAcademyAssignmentBackend

./: CMakeLists.txt  CustomCalander.qml  Main.qml  main.cpp  todo.cpp  todo.h  tododatabase.cpp  tododatabase.h  todolistmodel.cpp  todolistmodel.h  todomodel.cpp  todomodel.h
buttonComponents/: CMakeLists.txt  IconButton.qml  IconComboBox.qml  IconSvg.qml
components/: CalendarDateHeader.qml  CustomCalendar.qml  FormPageComponent.qml  FrontPageComponent.qml  Header.qml  ListViewComponent.qml
components/calendarComponents/: Mycalendar.qml
